included confirmed speakers

--- a/index.html
+++ b/index.html
@@ -148,6 +148,19 @@
                                         <div class="test-inner">
                                             <p>The two day event is packed with talks, workshops, and networking opportunities with the best and the brightest Bitcoin developers.</p>
                                             <p>Advancing Bitcoin is the only Bitcoin developer conference in Europe and our reach and reputation increases each year.</p>
+                                            <p>Confirmed speakers:
+                                                <ul>
+                                                    <li>Andrew Poelstra <div>Blockstream</div></li>
+                                                    <li>Andrew Chow <div>Blockstream</div></li>
+                                                    <li>Jimmy Song <div>Author of Programming Bitcoin</div></li>
+                                                    <li>Stepan Snigirev <div>CryptoAdvance</div></li>
+                                                    <li>Gleb Naumenko <div>Chaincode Labs</div></li>
+                                                    <li>Fabian Jahr <div>Chaincode Residency Alumni</div></li>
+                                                    <li>Selene Jin <div>Blockstream</div></li>
+                                                    <li>Sergi Delgado <div>PISA Research</div></li>
+                                                    <li>Adam Fiscor <div>Founder of Wasabi</div></li>
+                                                </ul>
+                                            </p>
                                             <p>Find out more on the <a href="https://www.advancingbitcoin.com">Advancing Bitcoin</a> website.</p>
                                     </div>
                                     <a href="#" class="reedmore" data-text-swap="-Read Less">+Read More</a>
@@ -181,6 +194,19 @@
                                     <div class="test-inner">
                                         <p>The two day event is packed with talks, workshops, and networking opportunities with the best and the brightest Bitcoin developers.</p>
                                         <p>Advancing Bitcoin is the only Bitcoin developer conference in Europe and our reach and reputation increases each year.</p>
+                                        <p>Confirmed speakers:
+                                            <ul>
+                                                <li>Andrew Poelstra <div>Blockstream</div></li>
+                                                <li>Andrew Chow <div>Blockstream</div></li>
+                                                <li>Jimmy Song <div>Author of Programming Bitcoin</div></li>
+                                                <li>Stepan Snigirev <div>CryptoAdvance</div></li>
+                                                <li>Gleb Naumenko <div>Chaincode Labs</div></li>
+                                                <li>Fabian Jahr <div>Chaincode Residency Alumni</div></li>
+                                                <li>Selene Jin <div>Blockstream</div></li>
+                                                <li>Sergi Delgado <div>PISA Research</div></li>
+                                                <li>Adam Fiscor <div>Founder of Wasabi</div></li>
+                                            </ul>
+                                        </p>
                                         <p>Find out more on the <a href="https://www.advancingbitcoin.com">Advancing Bitcoin</a> website.</p>
                                     </div>
                                     <a href="#" class="reedmore" data-text-swap="-Read Less">+Read More</a>
@@ -253,7 +279,7 @@
                                     <h3>Follow Us</h3>
                                     <ul>
                                         <li><a href="https://www.youtube.com/channel/UCk2qkOhNTmQ5Svdsh08jRRg"><img class="img-fluid" src="img/youtube-icon.svg" alt="" /></a></li>
-                                        <li><a href="https://vimeo.com/user94991385"><img class="img-fluid" src="img/vimo-icon.svg" alt="" /></a></li>
+                                        <li><a href="https://vimeo.com/user94991385"><img class="img-fluid" src="img/vimo-icon.svg" alt="Vimeo social icon" /></a></li>
                                         <li><a href="https://www.instagram.com/londonbitcoinweek/"><img class="img-fluid" src="img/instagram-icon.svg" alt="" /></a></li>
                                         <li><a href="https://www.twitter.com/advbitcoin"><img class="img-fluid" src="img/twitter-icon.svg" alt="Twitter icon" /></a></li>
                                     </ul>
@@ -270,22 +296,24 @@
                             </div>
                             <div class="col-md-4">
                                 <div class="footer-sponsor">
+                                    <!--
                                     <h3>Our Sponsors</h3>
                                     <ul>
                                         <li><a href="#"><img class="img-fluid" src="img/sponsor-img.png" alt="" /></a></li>
                                         <li><a href="#"><img class="img-fluid" src="img/sponsor-img.png" alt="" /></a></li>
                                         <li><a href="#"><img class="img-fluid" src="img/sponsor-img.png" alt="" /></a></li>
                                     </ul>
+                                    -->
                                 </div>
                             </div> 
                             <div class="col-md-3">
                                 <div class="footer-socail">
                                     <h3>Follow Us</h3>
                                     <ul>
-                                        <li><a href="#"><img class="img-fluid" src="img/youtube-icon.svg" alt="" /></a></li>
-                                        <li><a href="#"><img class="img-fluid" src="img/vimo-icon.svg" alt="" /></a></li>
-                                        <li><a href="#"><img class="img-fluid" src="img/instagram-icon.svg" alt="" /></a></li>
-                                        <li><a href="#"><img class="img-fluid" src="img/twitter-icon.svg" alt="" /></a></li>
+                                        <li><a href="https://www.youtube.com/channel/UCk2qkOhNTmQ5Svdsh08jRRg"><img class="img-fluid" src="img/youtube-icon.svg" alt="" /></a></li>
+                                        <li><a href="https://vimeo.com/user94991385"><img class="img-fluid" src="img/vimo-icon.svg" alt="Vimeo social icon" /></a></li>
+                                        <li><a href="https://www.instagram.com/londonbitcoinweek/"><img class="img-fluid" src="img/instagram-icon.svg" alt="Instagram social icon" /></a></li>
+                                        <li><a href="https://www.twitter.com/londonbitcoinweek"><img class="img-fluid" src="img/twitter-icon.svg" alt="" /></a></li>
                                     </ul>
                                 </div>
                             </div>
