added paid tag alt tag and removed tbc from coinscrum event

--- a/index.html
+++ b/index.html
@@ -170,9 +170,9 @@
                                         <span>February 6th</span>
                                     </div>
                                     <div class="title-price paid-tag">
-                                                                            <h4>Coinscrum - (Date TBC)</h4>
+                                                                            <h4>Coinscrum</h4>
                                                                             <div class="price">
-                                                                                <img src="img/star-icon.svg" alt="" /> FREE
+                                                                                <img src="img/star-icon.svg" alt="Icon showing this event is free to attend" /> FREE
                                                                             </div>
                                                                         </div>
                                                                         <p>Coinscrum will be hosting a lively discussion focused on Bitcoin. Further details will be posted closer to the time.</p>
